Added decompress command to decompress from 4bit to normal mod.

--- a/src/modprocessor/Properties/launchSettings.json
+++ b/src/modprocessor/Properties/launchSettings.json
@@ -3,6 +3,10 @@
     "Compress Mod Test": {
       "commandName": "Project",
       "commandLineArgs": "compress .\\TestFiles\\flight.mod"
+    },
+    "Decompress Mod Test": {
+      "commandName": "Project",
+      "commandLineArgs": "decompress .\\TestFiles\\flight.mod.4bit"
     }
   }
 }
